# OPGrinenko

./: CMakeLists.txt  README.md  main.c
libs/data_structures/vector/: vector.c  vector.h
